# todo_app_ddd

./: README.md  pyproject.toml
tests/: conftest.py
tests/integration/authentication/: test_login_service.py  test_signup_service.py
tests/unittests/todo/value_objects/: test_id.py  test_todo_id.py
tests/unittests/utils/: test_shared_utils.py
todo/application/use_cases/: exceptions.py
todo/application/use_cases/login_usecase/: login.py  login_service.py
todo/application/use_cases/signup_usecase/: signup.py  signup_service.py
todo/application/use_cases/todo/create_todo/: service.py
todo/domain/abstractions/: datetime.py
todo/domain/authentication/abstraction/: hashing.py  repository.py  token.py  validation.py
todo/domain/authentication/user/: email.py  exception.py  password.py  password_hash.py  user.py  user_name.py
todo/domain/authentication/user/entities/: user.py
todo/domain/authentication/user_credentials/: exception.py  password.py  password_hash.py  user_credentials.py
todo/domain/authentication/user_credentials/abstraction/: validation.py
todo/domain/entities/shared/: exceptions.py  id.py  utils.py  valueobject.py
todo/domain/entities/todo/: description.py  title.py  todo.py  todo_id.py
todo/domain/entities/user/: user.py  user_id.py  user_name.py
todo/domain/entities/user_credentials/: email.py  exception.py  password.py  password_hash.py  user_credentials.py
todo/domain/todo/: description.py  due_date.py  exception.py  title.py  todo.py
todo/domain/todo/value_objects/: description.py  due_date.py  title.py
todo/infrastructure/authentication/: hasher.py  validator.py
todo/infrastructure/persistence/memory/: user.py  user_credentials.py
todo/shared_kernel/: aggregate_root.py  entity.py  exceptions.py  utils.py  uuid_id.py  valueobject.py
(+12 files in other folders)
